--- a/src/Component.css
+++ b/src/Component.css
@@ -8,8 +8,7 @@
 .BuildingSubTrack,
 .BuildingSubTrackCol {
   display: inline;
-  padding-left: 0;
-  padding-right: 0;
+  border: 0;
   padding: 0;
   margin: 0;
   border: 0;
